--- a/Desafio01/package.json
+++ b/Desafio01/package.json
@@ -4,7 +4,8 @@
 	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest",
+		"test": "jest --watchAll",
+		"cover": "jest --coverage",
 		"lint": "eslint ."
 	},
 	"dependencies": {
@@ -16,17 +17,27 @@
 		"babel-eslint": "^8.0.2",
 		"babel-jest": "21.2.0",
 		"babel-preset-react-native": "4.0.0",
+		"enzyme": "^3.3.0",
+		"enzyme-adapter-react-16": "^1.1.1",
 		"eslint": "^4.9.0",
 		"eslint-config-airbnb": "^16.1.0",
 		"eslint-plugin-import": "^2.7.0",
 		"eslint-plugin-jsx-a11y": "^6.0.2",
 		"eslint-plugin-react": "^7.4.0",
 		"eslint-plugin-react-native": "^3.1.0",
-		"jest": "21.2.1",
+		"jest": "^22.1.2",
+		"react-dom": "^16.2.0",
 		"react-test-renderer": "16.0.0",
-		"reactotron-react-native": "^1.12.3"
+		"reactotron-react-native": "^1.12.3",
+		"sinon": "^4.1.6"
 	},
 	"jest": {
-		"preset": "react-native"
+		"preset": "react-native",
+		"setupFiles": [
+			"<rootDir>/__tests__/setup.js"
+		],
+		"testMatch": [
+			"<rootDir>/__tests__/**/?(*.)(spec|test).js"
+		]
 	}
 }
