--- a/Desafio02/.gitignore
+++ b/Desafio02/.gitignore
@@ -29,7 +29,6 @@ build/
 .gradle
 local.properties
 *.iml
-.vscode/
 
 # node.js
 #
@@ -52,3 +51,6 @@ buck-out/
 */fastlane/report.xml
 */fastlane/Preview.html
 */fastlane/screenshots
+
+# Bundle artifact
+*.jsbundle
